--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>lista impegni</title>
+    <link rel="stylesheet" href="./reset/reset.css" />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div id="container">
+      <div class="input-container">
+        <h1>Note</h1>
+        <input class="input" type="text" placeholder="Scrivi nota" />
+        <button onclick="" class="add-btn">Aggiungi</button>
+      </div>
+      <hr />
+      <ul id="lista-note">
+        <li class="item">fare la spesa</li>
+        <li class="item">lavare la macchina</li>
+        <li class="item">portare fuori il cane</li>
+      </ul>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
