--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <div id="container">
       <div class="input-container">
         <h1>Note</h1>
-        <input class="input" type="text" placeholder="Scrivi nota" />
+        <input id="input" type="text" placeholder="Scrivi nota" />
         <button onclick="" class="add-btn">Aggiungi</button>
       </div>
-      <hr />
+
       <ul id="lista-note">
-        <li class="item">fare la spesa</li>
-        <li class="item">lavare la macchina</li>
-        <li class="item">portare fuori il cane</li>
+        <li onclick="selezionaElemento()" class="item">fare la spesa</li>
+        <li onclick="selezionaElemento()" class="item">lavare la macchina</li>
+        <li onclick="selezionaElemento()" class="item">portare fuori il cane</li>
       </ul>
     </div>
     <script src="./script.js"></script>
